// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scroll should hide icon 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={true}
    isActive={false}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): null,
  Symbol(enzyme.__nodes__): Array [
    null,
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Scroll should render when active and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={true}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Circle
          cx="252"
          cy="62"
          fill="#FFFFFF"
          fillOpacity="0.5"
          r="60"
        />,
        <Path
          d="M288.1,35.5c0-3.6-2.9-6.5-6.5-6.5h-50c-3.6,0-6.5,2.9-6.5,6.5v0.1V82h-3.5c-3.6,0-6.5,2.9-6.5,6.5c0,0,0,0,0,0 c0,0,0,0,0,0c0,3.6,2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5v-0.1V42.1h3.5C285.2,42.1,288.1,39.2,288.1,35.5 C288.1,35.6,288.1,35.5,288.1,35.5C288.1,35.5,288.1,35.5,288.1,35.5z M266.1,92h-44.5c-1.9,0-3.5-1.6-3.5-3.5 c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.4c0,0,0,0,0,0c0,0,0,0,0,0C265.1,89.8,265.5,91,266.1,92z M281.6,39h-3.5v-3.4 c0-1.9,1.6-3.5,3.5-3.5c1.9,0,3.5,1.6,3.5,3.5C285.1,37.4,283.5,39,281.6,39z M228.1,35.6c0-1.9,1.6-3.5,3.5-3.5h44.5 c-0.6,1-1,2.2-1,3.4v0.1V82h-3.5h-43.5V35.6z M271.6,92c-1.9,0-3.5-1.6-3.5-3.5c0-1.9,1.6-3.5,3.5-3.5h3.5v3.4 C275.1,90.4,273.5,92,271.6,92z"
          fill="#FFFFFF"
        />,
        <React.Fragment>
          <Polygon
            fill="#FFFFFF"
            points="262.9,36.7 259.8,39.8 256.7,36.7 254.6,38.8 257.7,41.9 254.7,44.9 256.8,47 259.8,44 262.9,47 265,44.9 261.9,41.9 265.1,38.8 	"
          />
          <Path
            d="M250.4,52.2l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,49.1,250.7,50.5,250.4,52.2z"
            fill="#FFFFFF"
          />
          <Path
            d="M253.3,56.4l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V56.4z"
            fill="#FFFFFF"
          />
          <Path
            d="M248.1,66.9l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,65,248.9,65.9,248.1,66.9z"
            fill="#FFFFFF"
          />
          <Path
            d="M242.6,68c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,68,242.6,68z M242.6,74.9c-1.1,0-1.9-0.9-1.9-1.9 c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9C244.5,74.1,243.6,74.9,242.6,74.9z"
            fill="#FFFFFF"
          />
        </React.Fragment>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "252",
          "cy": "62",
          "fill": "#FFFFFF",
          "fillOpacity": "0.5",
          "r": "60",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M288.1,35.5c0-3.6-2.9-6.5-6.5-6.5h-50c-3.6,0-6.5,2.9-6.5,6.5v0.1V82h-3.5c-3.6,0-6.5,2.9-6.5,6.5c0,0,0,0,0,0 c0,0,0,0,0,0c0,3.6,2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5v-0.1V42.1h3.5C285.2,42.1,288.1,39.2,288.1,35.5 C288.1,35.6,288.1,35.5,288.1,35.5C288.1,35.5,288.1,35.5,288.1,35.5z M266.1,92h-44.5c-1.9,0-3.5-1.6-3.5-3.5 c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.4c0,0,0,0,0,0c0,0,0,0,0,0C265.1,89.8,265.5,91,266.1,92z M281.6,39h-3.5v-3.4 c0-1.9,1.6-3.5,3.5-3.5c1.9,0,3.5,1.6,3.5,3.5C285.1,37.4,283.5,39,281.6,39z M228.1,35.6c0-1.9,1.6-3.5,3.5-3.5h44.5 c-0.6,1-1,2.2-1,3.4v0.1V82h-3.5h-43.5V35.6z M271.6,92c-1.9,0-3.5-1.6-3.5-3.5c0-1.9,1.6-3.5,3.5-3.5h3.5v3.4 C275.1,90.4,273.5,92,271.6,92z",
          "fill": "#FFFFFF",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": Array [
            <Polygon
              fill="#FFFFFF"
              points="262.9,36.7 259.8,39.8 256.7,36.7 254.6,38.8 257.7,41.9 254.7,44.9 256.8,47 259.8,44 262.9,47 265,44.9 261.9,41.9 265.1,38.8 	"
            />,
            <Path
              d="M250.4,52.2l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,49.1,250.7,50.5,250.4,52.2z"
              fill="#FFFFFF"
            />,
            <Path
              d="M253.3,56.4l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V56.4z"
              fill="#FFFFFF"
            />,
            <Path
              d="M248.1,66.9l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,65,248.9,65.9,248.1,66.9z"
              fill="#FFFFFF"
            />,
            <Path
              d="M242.6,68c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,68,242.6,68z M242.6,74.9c-1.1,0-1.9-0.9-1.9-1.9 c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9C244.5,74.1,243.6,74.9,242.6,74.9z"
              fill="#FFFFFF"
            />,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "fill": "#FFFFFF",
              "points": "262.9,36.7 259.8,39.8 256.7,36.7 254.6,38.8 257.7,41.9 254.7,44.9 256.8,47 259.8,44 262.9,47 265,44.9 261.9,41.9 265.1,38.8 	",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M250.4,52.2l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,49.1,250.7,50.5,250.4,52.2z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M253.3,56.4l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V56.4z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M248.1,66.9l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,65,248.9,65.9,248.1,66.9z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "d": "M242.6,68c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,68,242.6,68z M242.6,74.9c-1.1,0-1.9-0.9-1.9-1.9 c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9C244.5,74.1,243.6,74.9,242.6,74.9z",
              "fill": "#FFFFFF",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": Symbol(react.fragment),
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Circle
            cx="252"
            cy="62"
            fill="#FFFFFF"
            fillOpacity="0.5"
            r="60"
          />,
          <Path
            d="M288.1,35.5c0-3.6-2.9-6.5-6.5-6.5h-50c-3.6,0-6.5,2.9-6.5,6.5v0.1V82h-3.5c-3.6,0-6.5,2.9-6.5,6.5c0,0,0,0,0,0 c0,0,0,0,0,0c0,3.6,2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5v-0.1V42.1h3.5C285.2,42.1,288.1,39.2,288.1,35.5 C288.1,35.6,288.1,35.5,288.1,35.5C288.1,35.5,288.1,35.5,288.1,35.5z M266.1,92h-44.5c-1.9,0-3.5-1.6-3.5-3.5 c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.4c0,0,0,0,0,0c0,0,0,0,0,0C265.1,89.8,265.5,91,266.1,92z M281.6,39h-3.5v-3.4 c0-1.9,1.6-3.5,3.5-3.5c1.9,0,3.5,1.6,3.5,3.5C285.1,37.4,283.5,39,281.6,39z M228.1,35.6c0-1.9,1.6-3.5,3.5-3.5h44.5 c-0.6,1-1,2.2-1,3.4v0.1V82h-3.5h-43.5V35.6z M271.6,92c-1.9,0-3.5-1.6-3.5-3.5c0-1.9,1.6-3.5,3.5-3.5h3.5v3.4 C275.1,90.4,273.5,92,271.6,92z"
            fill="#FFFFFF"
          />,
          <React.Fragment>
            <Polygon
              fill="#FFFFFF"
              points="262.9,36.7 259.8,39.8 256.7,36.7 254.6,38.8 257.7,41.9 254.7,44.9 256.8,47 259.8,44 262.9,47 265,44.9 261.9,41.9 265.1,38.8 	"
            />
            <Path
              d="M250.4,52.2l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,49.1,250.7,50.5,250.4,52.2z"
              fill="#FFFFFF"
            />
            <Path
              d="M253.3,56.4l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V56.4z"
              fill="#FFFFFF"
            />
            <Path
              d="M248.1,66.9l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,65,248.9,65.9,248.1,66.9z"
              fill="#FFFFFF"
            />
            <Path
              d="M242.6,68c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,68,242.6,68z M242.6,74.9c-1.1,0-1.9-0.9-1.9-1.9 c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9C244.5,74.1,243.6,74.9,242.6,74.9z"
              fill="#FFFFFF"
            />
          </React.Fragment>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "252",
            "cy": "62",
            "fill": "#FFFFFF",
            "fillOpacity": "0.5",
            "r": "60",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M288.1,35.5c0-3.6-2.9-6.5-6.5-6.5h-50c-3.6,0-6.5,2.9-6.5,6.5v0.1V82h-3.5c-3.6,0-6.5,2.9-6.5,6.5c0,0,0,0,0,0 c0,0,0,0,0,0c0,3.6,2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5v-0.1V42.1h3.5C285.2,42.1,288.1,39.2,288.1,35.5 C288.1,35.6,288.1,35.5,288.1,35.5C288.1,35.5,288.1,35.5,288.1,35.5z M266.1,92h-44.5c-1.9,0-3.5-1.6-3.5-3.5 c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.4c0,0,0,0,0,0c0,0,0,0,0,0C265.1,89.8,265.5,91,266.1,92z M281.6,39h-3.5v-3.4 c0-1.9,1.6-3.5,3.5-3.5c1.9,0,3.5,1.6,3.5,3.5C285.1,37.4,283.5,39,281.6,39z M228.1,35.6c0-1.9,1.6-3.5,3.5-3.5h44.5 c-0.6,1-1,2.2-1,3.4v0.1V82h-3.5h-43.5V35.6z M271.6,92c-1.9,0-3.5-1.6-3.5-3.5c0-1.9,1.6-3.5,3.5-3.5h3.5v3.4 C275.1,90.4,273.5,92,271.6,92z",
            "fill": "#FFFFFF",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              <Polygon
                fill="#FFFFFF"
                points="262.9,36.7 259.8,39.8 256.7,36.7 254.6,38.8 257.7,41.9 254.7,44.9 256.8,47 259.8,44 262.9,47 265,44.9 261.9,41.9 265.1,38.8 	"
              />,
              <Path
                d="M250.4,52.2l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,49.1,250.7,50.5,250.4,52.2z"
                fill="#FFFFFF"
              />,
              <Path
                d="M253.3,56.4l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V56.4z"
                fill="#FFFFFF"
              />,
              <Path
                d="M248.1,66.9l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,65,248.9,65.9,248.1,66.9z"
                fill="#FFFFFF"
              />,
              <Path
                d="M242.6,68c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,68,242.6,68z M242.6,74.9c-1.1,0-1.9-0.9-1.9-1.9 c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9C244.5,74.1,243.6,74.9,242.6,74.9z"
                fill="#FFFFFF"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "fill": "#FFFFFF",
                "points": "262.9,36.7 259.8,39.8 256.7,36.7 254.6,38.8 257.7,41.9 254.7,44.9 256.8,47 259.8,44 262.9,47 265,44.9 261.9,41.9 265.1,38.8 	",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M250.4,52.2l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,49.1,250.7,50.5,250.4,52.2z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M253.3,56.4l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V56.4z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M248.1,66.9l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,65,248.9,65.9,248.1,66.9z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "d": "M242.6,68c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,68,242.6,68z M242.6,74.9c-1.1,0-1.9-0.9-1.9-1.9 c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9C244.5,74.1,243.6,74.9,242.6,74.9z",
                "fill": "#FFFFFF",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": Symbol(react.fragment),
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Scroll should render when inactive and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={false}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z"
          fill="#DDDDDD"
        />,
        <Polygon
          fill="#DDDDDD"
          points="262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	"
        />,
        <Path
          d="M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z"
          fill="#DDDDDD"
        />,
        <Path
          d="M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z"
          fill="#DDDDDD"
        />,
        <Path
          d="M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z"
          fill="#DDDDDD"
        />,
        <Path
          d="M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z"
          fill="#DDDDDD"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#DDDDDD",
          "points": "262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z",
          "fill": "#DDDDDD",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z"
            fill="#DDDDDD"
          />,
          <Polygon
            fill="#DDDDDD"
            points="262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	"
          />,
          <Path
            d="M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z"
            fill="#DDDDDD"
          />,
          <Path
            d="M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z"
            fill="#DDDDDD"
          />,
          <Path
            d="M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z"
            fill="#DDDDDD"
          />,
          <Path
            d="M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z"
            fill="#DDDDDD"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#DDDDDD",
            "points": "262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z",
            "fill": "#DDDDDD",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Scroll should render when inactive and pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Scroll
    colourScheme={
      Object {
        "active": "#FFFFFF",
        "inactive": "#DDDDDD",
        "pressed": "#EEEEEE",
      }
    }
    hasDismiss={false}
    hasHiddenIcons={false}
    isActive={false}
    isPressed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Path
          d="M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z"
          fill="#EEEEEE"
        />,
        <Polygon
          fill="#EEEEEE"
          points="262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	"
        />,
        <Path
          d="M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z"
          fill="#EEEEEE"
        />,
        <Path
          d="M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z"
          fill="#EEEEEE"
        />,
        <Path
          d="M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z"
          fill="#EEEEEE"
        />,
        <Path
          d="M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z"
          fill="#EEEEEE"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "#EEEEEE",
          "points": "262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z",
          "fill": "#EEEEEE",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Path
            d="M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z"
            fill="#EEEEEE"
          />,
          <Polygon
            fill="#EEEEEE"
            points="262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	"
          />,
          <Path
            d="M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z"
            fill="#EEEEEE"
          />,
          <Path
            d="M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z"
            fill="#EEEEEE"
          />,
          <Path
            d="M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z"
            fill="#EEEEEE"
          />,
          <Path
            d="M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z"
            fill="#EEEEEE"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M281.6,54h-50c-3.6,0-6.5,2.9-6.5,6.5V107h-3.5c-3.6,0-6.5,2.9-6.5,6.5s2.9,6.5,6.5,6.5h50c3.6,0,6.5-2.9,6.5-6.5V67h3.5 c3.6,0,6.5-2.9,6.5-6.5S285.2,54,281.6,54z M228.1,60.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5V107h-3.5h-43.5V60.5z M218.1,113.5c0-1.9,1.6-3.5,3.5-3.5h44.5c-0.6,1-1,2.2-1,3.5s0.4,2.5,1,3.5h-44.5C219.7,117,218.1,115.4,218.1,113.5z M271.6,117 c-1.9,0-3.5-1.6-3.5-3.5s1.6-3.5,3.5-3.5h3.5v3.5C275.1,115.4,273.5,117,271.6,117z M281.6,64h-3.5v-3.5c0-1.9,1.6-3.5,3.5-3.5 s3.5,1.6,3.5,3.5S283.5,64,281.6,64z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "#EEEEEE",
            "points": "262.9,61.6 259.8,64.7 256.7,61.6 254.6,63.7 257.7,66.8 254.7,69.9 256.8,72 259.8,68.9 262.9,72 265,69.9 262,66.8 265.1,63.7 	",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M248.1,91.8l2.3,1.9c1-1.2,1.7-2.5,2.2-3.9l-2.8-1C249.4,89.9,248.9,90.8,248.1,91.8z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M250.4,77.1l2.9,0.6c0.2-1.1,0.7-1.9,1.4-2.8l-2.1-2.1C251.5,74,250.7,75.4,250.4,77.1z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M253.3,81.3l-3,0.2v0.6c0,0.9,0.1,1.8,0.1,2.7c0,0.2,0,0.4,0,0.6l3,0.1c0-0.3,0-0.5,0-0.7c0-1,0-2-0.1-2.9V81.3z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M242.6,92.9c-2.7,0-4.9,2.2-4.9,4.9s2.2,4.9,4.9,4.9s4.9-2.2,4.9-4.9S245.3,92.9,242.6,92.9z M242.6,99.8 c-1.1,0-1.9-0.9-1.9-1.9c0-1.1,0.9-1.9,1.9-1.9s1.9,0.8,1.9,1.9S243.6,99.8,242.6,99.8z",
            "fill": "#EEEEEE",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
